--- a/app/views/articles/new.html.erb
+++ b/app/views/articles/new.html.erb
@@ -1,5 +1,14 @@
 <h1>Create an article</h1>
 
+<% if @article.errors.any? %>
+<h2> The following errors prevented the article from being created</h2>
+<ul>
+  <% @article.errors.full_messages.each do |msg| %>
+    <li><%= msg %></li>
+  <% end %>
+</ul>
+<% end %>
+
 <%= form_for @article do |f| %>
   <p>
     <%=  f.label :title %><br/>
@@ -11,5 +20,8 @@
   </p>
   <p>
     <%= f.submit %>
+  </p>
+  <p>
+    
   </p>
 <%end%>
