Added edit, update, show, and index listing

--- a/app/views/articles/edit.html.erb
+++ b/app/views/articles/edit.html.erb
@@ -1,4 +1,4 @@
-<h1>Create an article</h1>
+<h1>Edit Existing Artile</h1>
 
 <% if @article.errors.any? %>
 <h2> The following errors prevented the article from being created</h2>
@@ -20,9 +20,6 @@
   </p>
   <p>
     <%= f.submit %>
-  </p>
-  <p>
-    
   </p>
 <%end%>
 
