--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -5,3 +5,11 @@
 <p>
   Description: <%= @article.description %>
 </p>
+
+<p>
+  <%= link_to "Edit this article", edit_article_path %>
+</p>
+
+<p>
+  <%= link_to "Back to articles", articles_path %>
+</p>
