--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,3 +1,3 @@
-<h1>We're All About Artisan Sphincter</h1>
-  <h2>What Is Artisan Spincter?</h2>
-    <p>Contrary to popular belief, artisan sphincter is a lifestyle</p>
+<h1>Alpha Blog</h1>
+
+<%= link_to 'Alpha Blog', articles_path %> | <%= link_to 'About', homepage_path %>
