--- a/app/views/pages/homepage.html.erb
+++ b/app/views/pages/homepage.html.erb
@@ -1,2 +1,5 @@
-<h1>DICK ARMY</h1>
+<div class="center jumbotron">
+  <h1>ALPHA BLOG</h1>
+  <%= link_to "Sign up now", "#", class: "btn btn-danger btn-large btn-xlarge" %>
+</div>
 
