--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -1,15 +1,14 @@
-<h1>Showing Selected Article</h1>
+<h2 align="center">Title: <%= @article.title %></h2>
 
-<p>Title: <%= @article.title %>
-</p>
-<p>
-  Description: <%= @article.description %>
-</p>
-
-<p>
-  <%= link_to "Edit this article", edit_article_path %>
-</p>
-
-<p>
-  <%= link_to "Back to articles", articles_path %>
-</p>
+<div class="well col-xs-8 col-xs-offset-2">
+  <h4 class="center description"><strong>Description:</strong></h4>
+  <hr> 
+  <%= simple_format(@article.description) %>
+  <div class="article-actions">
+    <%= link_to "Edit this article", edit_article_path(@article), class: "btn btn-xs btn-primary" %>
+    <%= link_to "View all articles", articles_path, class: "btn btn-xs btn-success" %>
+    <%= link_to "Delete this article", article_path(@article), method: :delete, 
+                                       data: {confirm: "Are you sure you want to delete this article?"}, 
+                                      class: "btn btn-xs btn-danger" %>
+  </div>
+</div>
