Style articles listing page

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -37,7 +37,6 @@ $navbar-default-bg: black;
 .btn-xlarge{
   font-size: 1.7em;
   background-color: black;
-  
 }
 
 .article-actions{
@@ -47,6 +46,17 @@ $navbar-default-bg: black;
 
 .description{
   margin-top: 0;
+}
+
+.article-title{
+  font-weight: bold;
+  font-size: 1.5em;
+}
+
+.article-body{
+  borderj-top: 1px solid #eaeaea;
+  padding-top: 15px;
+  padding-bottom: 15px;
 }
 
 footer{
